--- a/smtd-api/package.json
+++ b/smtd-api/package.json
@@ -20,6 +20,7 @@
     "helmet": "^3.18.0",
     "pg": "^7.8.1",
     "socket.io": "^2.2.0",
+    "tough-cookie": "^4.0.0",
     "ws": "^7.0.0"
   },
   "devDependencies": {
