--- a/smtd-api/package.json
+++ b/smtd-api/package.json
@@ -18,9 +18,10 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "helmet": "^3.18.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^7.8.1",
     "socket.io": "^2.2.0",
-    "tough-cookie": "^4.0.0",
     "ws": "^7.0.0"
   },
   "devDependencies": {
