--- a/smtd-api/package.json
+++ b/smtd-api/package.json
@@ -17,6 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.1",
     "helmet": "^3.18.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
